done all the exercises

--- a/classes/Ch.01.Exercises-FSDS-MT22.ipynb
+++ b/classes/Ch.01.Exercises-FSDS-MT22.ipynb
@@ -15,11 +15,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e2363fdd-b065-41b1-a4ab-7149223869c5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Exercise 1. Data as operationalisation \n",
     "\n",
@@ -50,17 +48,20 @@
     "\n",
     "__Answer below here:__ \n",
     "1. Number of close friends (as a survey Q, interview Q, and as trace data):\n",
-    "- Survey: \"Name all your close friends:\"\n",
-    "- Interview: \"What is a close friend to you? How many people do you consider close friends?\"\n",
-    "- Trace: Number of people co-tagged more than x times on Instagram (publicly accessible for many profiles)\n",
+    "- Survey: \"Name all your close friends:\", \"How often have you seen X in the last 6 months\"\n",
+    "    - Should you standardise the definition of close friends?\n",
+    "- Interview: \"What is a close friend to you? Name your close friends?\"\n",
+    "- Trace: Number of people co-tagged more than x times on BeReal (publicly accessible for many profiles), Mutual friends (Facebook) or reciprocal following (Instagram, Twitter)\n",
     "\n",
     "2. Political affiliation (as a survey Q, interview Q, and as trace data):\n",
-    "- Survey: What party did you vote for in the last election?\n",
+    "- Survey: What party did you vote for in the last X election(s)? Who are you considering voting for in the next election? Classical likert-style survey\n",
     "- Interview: How much do you relate to the party you voted for in the last election?\n",
-    "- Trace: Look at retweet behavior on Twitter (easily accessible + people are more likely to retweet things they agree with)\n",
+    "- Trace: Look at retweet behavior on Twitter (easily accessible + people are more likely to retweet things they agree with), which facebook pages do they positively react to.\n",
     "\n",
     "3. Preferred social media (as a survey Q, interview Q, and as trace data):\n",
     "- Survey: What is your preferred social media?\n",
+    "- Interview: What is your preferred social media? Why? What qualities do you like in a social media.\n",
+    "- Trace: Time spent (but it might reflect addictiveness more than preference), \"positive\" activity (e.g. likes or reactions)\n",
     "\n",
     "__Answer above here__"
    ]
@@ -143,38 +144,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "2752d838-de79-48c9-8af3-7d648eaba757",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "euiooueoeeao\n",
-      "aeeoieiaeuoie\n",
-      "iiieae\n",
-      "CPU times: total: 172 ms\n",
-      "Wall time: 209 ms\n"
+      "UsageError: Line magic function `%%timeit` not found.\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "from typing import Optional\n",
     "\n",
-    "def return_only_vowels(text: str) -> str:\n",
+    "def return_only_vowels(text: str) -> Optional[str]:\n",
     "    if not isinstance(text, str):\n",
-    "        raise TypeError(\"text must be a string\")\n",
-    "    return \"\".join([letter for letter in text if letter in 'aeiou']) \n",
+    "        return None\n",
+    "    return \"\".join([letter for letter in text.lower() if letter in 'aeiouæøå']) \n",
     "\n",
     "\n",
     "text1 = \"The quick brown fox jumped over the lazy dog\"\n",
     "text2 = \"It was the best of times, it was the blurst of times.\"\n",
     "text3 = \"A stitch in time saves 9\"\n",
+    "notatext = 123\n",
     "\n",
     "# The rest us up to you! \n",
     "for i in range(10000):\n",
-    "    result_list = [return_only_vowels(text) for text in [text1, text2, text3, ]]\n",
+    "    result_list = [return_only_vowels(text) for text in [text1, text2, text3, notatext ]]\n",
     "for result in result_list: \n",
     "    print(result)"
    ]
@@ -204,7 +203,20 @@
     "Below write the pseudocode. Share it with a friend of yours and ask: do you think they would make the same pizza as you with these instructions? What might vary? \n",
     "\n",
     "__Answer below here__: \n",
-    "\n",
+    "```\n",
+    "1. Create a list of available toppings \n",
+    "2. Create a list of available styles (Bianca and rosso)\n",
+    "3. Ask the user to pick a base\n",
+    "4. Ask the user to pick up to two valid toppings (in a while loop)\n",
+    "5. Turn on the oven at 250*C (async def)\n",
+    "5. Roll out the dough\n",
+    "6. Add the sauce (to the dough)\n",
+    "7. Add the cheese\n",
+    "8. Add the toppings (for loop)\n",
+    "9. Put in the oven for 10 minutes\n",
+    "10. Turn the pizza around\n",
+    "11. Bake until done (while loop)\n",
+    "```\n",
     "...\n",
     "\n",
     "__Answer above here__"
@@ -240,6 +252,22 @@
     "Please select a data set and answer the questions above. \n",
     "\n",
     "__Answer below here__:\n",
+    "\n",
+    "I have chosen the Kickstarter data from [werobot.io](https://webrobots.io/kickstarter-datasets/). The company does a monthly scrape of data and metadata on all kickstarter projects. \n",
+    "\n",
+    "### A: Summary of the data\n",
+    "There are a bunch of columns in this dataset from timestamps, campaign-information, and funding. The nature of the summary of course depend on the column and datatype: timestamps would afford summaries like average frequency and periodic patterns (i.e. seasonality), whereas the numeric ones (like funding amount and number of backers) would afford more classical summary statistics.\n",
+    "\n",
+    "\n",
+    "### B: What is excluded? \n",
+    "- Would certain cases or classes of people/things be excluded that could be considered? \n",
+    "    - Kickstarter has a quite [restricted user base](https://help.kickstarter.com/hc/en-us/articles/115005128594-Who-can-use-Kickstarter-). Only people above the age of 18 with a bank account in a relatively narrow set of countries predominately in Europe and North America can create campaigns. This excludes the whole of the Global South as well as less priveleged individuals from the included countries. Furthermore, the dataset only contains information specifically on the kickstarter website. \n",
+    "- Would other data about the existing cases could be useful or interesting? \n",
+    "    - Kickstarter projects are largely driven by hype (CITATION MISSING but probably true). Therefore it would be highly relevant to investigate how the projects are talked about on social media, in the classical media, or if any specific advertisement campaigns are undertaken. \n",
+    "- Could we merge in data to compensate or would we need to do a separate data collection effort?\n",
+    "    - Getting media data would probably require a separate data collection efforts as it relies on different sources (like Twitter and Reuters). This would also drastically increase the complexity of the data as linking the datasets could be tricky - especially if the projects are only mentioned and not explicitly linked. Some kind of [named entity recognition](https://en.wikipedia.org/wiki/Named-entity_recognition) pipeline could probably be set up, but this would be a lot of work. \n",
+    "- Would accessing this data be ethically reasonable for academic research?\n",
+    "    - Webrobot state in their [terms and conditions](https://webrobots.io/terms-and-conditions/) that the datasets are provided as is. Given that the datasets are publicly accessible there should be no major ethical issues with analysing the data. \n",
     "\n",
     "...\n",
     "\n",
