--- a/classes/Ch.01.Exercises-FSDS-MT22.ipynb
+++ b/classes/Ch.01.Exercises-FSDS-MT22.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bab7acdc-1f7e-4708-8d99-cc1ca0ff1bc3",
    "metadata": {},
    "outputs": [
@@ -92,11 +92,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The quick brown fox jumped over the lazy dog\n",
-      "It was the best of times, it was the blurst of times.\n",
-      "A stitch in time saves 9\n",
-      "CPU times: total: 438 ms\n",
-      "Wall time: 560 ms\n"
+      "euiooueoeeao\n",
+      "aeeoieiaeuoie\n",
+      "iiieae\n",
+      "eeoe\n",
+      "CPU times: total: 46.9 ms\n",
+      "Wall time: 58 ms\n"
      ]
     }
    ],
@@ -117,15 +118,16 @@
     "        elif letter == 'u':\n",
     "            newtext += letter\n",
     "        \n",
-    "    return text\n",
+    "    return newtext\n",
     "\n",
     "text1 = \"The quick brown fox jumped over the lazy dog\"\n",
     "text2 = \"It was the best of times, it was the blurst of times.\"\n",
     "text3 = \"A stitch in time saves 9\"\n",
+    "text4 = \"Rød grød med fløde og æbler\"\n",
     "\n",
-    "for i in range(10000):\n",
+    "for i in range(1000):\n",
     "    result_list = []\n",
-    "    for text in [text1, text2, text3]:\n",
+    "    for text in [text1, text2, text3, text4]:\n",
     "        result_list.append(return_only_vowels(text))\n",
     "\n",
     "for result in result_list: \n",
@@ -144,15 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "2752d838-de79-48c9-8af3-7d648eaba757",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Line magic function `%%timeit` not found.\n"
+      "euiooueoeeao\n",
+      "iaeeoieiaeuoie\n",
+      "aiiieae\n",
+      "øøeøeoæe\n",
+      "CPU times: total: 31.2 ms\n",
+      "Wall time: 25 ms\n"
      ]
     }
    ],
@@ -163,17 +170,17 @@
     "def return_only_vowels(text: str) -> Optional[str]:\n",
     "    if not isinstance(text, str):\n",
     "        return None\n",
-    "    return \"\".join([letter for letter in text.lower() if letter in 'aeiouæøå']) \n",
+    "    return \"\".join([letter for letter in text.lower() if letter in 'aeiouæøå']) # NB: Note the Danish vowels!\n",
     "\n",
     "\n",
     "text1 = \"The quick brown fox jumped over the lazy dog\"\n",
     "text2 = \"It was the best of times, it was the blurst of times.\"\n",
     "text3 = \"A stitch in time saves 9\"\n",
-    "notatext = 123\n",
+    "text4 = \"Rød grød med fløde og æbler\"\n",
     "\n",
     "# The rest us up to you! \n",
-    "for i in range(10000):\n",
-    "    result_list = [return_only_vowels(text) for text in [text1, text2, text3, notatext ]]\n",
+    "for i in range(1000):\n",
+    "    result_list = [return_only_vowels(text) for text in [text1, text2, text3, text4,  ]]\n",
     "for result in result_list: \n",
     "    print(result)"
    ]
