--- a/classes/Ch.01.Exercises-FSDS-MT22.ipynb
+++ b/classes/Ch.01.Exercises-FSDS-MT22.ipynb
@@ -49,7 +49,8 @@
     "__Answer below here:__ \n",
     "1. Number of close friends (as a survey Q, interview Q, and as trace data):\n",
     "- Survey: \"Name all your close friends:\", \"How often have you seen X in the last 6 months\"\n",
-    "    - Should you standardise the definition of close friends?\n",
+    "    - Should you standardise the definition of close friends? This runs the risk of pushing a definition on subjects that they don't resonate with; instead of measuring the heterogenous concept of \"close friends\" you are measuring _one_ subjective definition.\n",
+    "    - Also it seems to be better practice to ask people to list friends rather than directly list a number as this forces them to actively engage with the question.\n",
     "- Interview: \"What is a close friend to you? Name your close friends?\"\n",
     "- Trace: Number of people co-tagged more than x times on BeReal (publicly accessible for many profiles), Mutual friends (Facebook) or reciprocal following (Instagram, Twitter)\n",
     "\n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "bab7acdc-1f7e-4708-8d99-cc1ca0ff1bc3",
    "metadata": {},
    "outputs": [
@@ -92,18 +93,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "euiooueoeeao\n",
-      "aeeoieiaeuoie\n",
-      "iiieae\n",
-      "eeoe\n",
-      "CPU times: total: 46.9 ms\n",
-      "Wall time: 58 ms\n"
+      "36.6 µs ± 1.35 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
-    "\n",
     "def return_only_vowels(text):\n",
     "    newtext = \"\"\n",
     "    for letter in text: \n",
@@ -120,16 +114,30 @@
     "        \n",
     "    return newtext\n",
     "\n",
+    "def process_text_list(text_list):\n",
+    "    result_list = []\n",
+    "    for text in text_list:\n",
+    "        result_list.append(return_only_vowels(text))\n",
+    "    return result_list\n",
+    "\n",
     "text1 = \"The quick brown fox jumped over the lazy dog\"\n",
     "text2 = \"It was the best of times, it was the blurst of times.\"\n",
     "text3 = \"A stitch in time saves 9\"\n",
     "text4 = \"Rød grød med fløde og æbler\"\n",
+    "text_list = [text1, text2, text3, text4]\n",
     "\n",
-    "for i in range(1000):\n",
-    "    result_list = []\n",
-    "    for text in [text1, text2, text3, text4]:\n",
-    "        result_list.append(return_only_vowels(text))\n",
     "\n",
+    "%timeit process_text_list(text_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d61e31f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_list = process_text_list(text_list)\n",
     "for result in result_list: \n",
     "    print(result)"
    ]
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "2752d838-de79-48c9-8af3-7d648eaba757",
    "metadata": {},
    "outputs": [
@@ -154,35 +162,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "15.7 µs ± 1.43 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
       "euiooueoeeao\n",
-      "iaeeoieiaeuoie\n",
-      "aiiieae\n",
-      "øøeøeoæe\n",
-      "CPU times: total: 31.2 ms\n",
-      "Wall time: 25 ms\n"
+      "Iaeeoieiaeuoie\n",
+      "Aiiieae\n",
+      "øøeøeoæe\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "import re\n",
     "from typing import Optional\n",
+    "\n",
     "\n",
     "def return_only_vowels(text: str) -> Optional[str]:\n",
     "    if not isinstance(text, str):\n",
     "        return None\n",
-    "    return \"\".join([letter for letter in text.lower() if letter in 'aeiouæøå']) # NB: Note the Danish vowels!\n",
+    "    all_vowels = 'aeiouæøåAEIOUÆØÅ'\n",
+    "    return \"\".join([letter for letter in text if letter in all_vowels]) # NB: Note the Danish vowels!\n",
     "\n",
     "\n",
     "text1 = \"The quick brown fox jumped over the lazy dog\"\n",
     "text2 = \"It was the best of times, it was the blurst of times.\"\n",
     "text3 = \"A stitch in time saves 9\"\n",
     "text4 = \"Rød grød med fløde og æbler\"\n",
+    "text_list = [text1, text2, text3, text4]\n",
     "\n",
     "# The rest us up to you! \n",
-    "for i in range(1000):\n",
-    "    result_list = [return_only_vowels(text) for text in [text1, text2, text3, text4,  ]]\n",
+    "%timeit [return_only_vowels(text) for text in text_list]\n",
+    "\n",
+    "result_list =  [return_only_vowels(text) for text in [text1, text2, text3, text4,  ]]\n",
+    "\n",
     "for result in result_list: \n",
     "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "862dde81",
+   "metadata": {},
+   "source": [
+    "As we see, the code runs around ~2x faster than the original version. Furthermore, it has a couple of FREE advantages: \n",
+    "1. It correctly handles capitalized letters (Functional)\n",
+    "2. It fails gracefully when presented with invalid (non-string) input by returning None (Robust)\n",
+    "3. It reads much clearer by employing pythonic syntax (Elegant)\n",
+    "4. Code go brrrr (Effective)"
    ]
   },
   {
