--- a/classes/Ch.02.Exercises-FSDS-MT22.ipynb
+++ b/classes/Ch.02.Exercises-FSDS-MT22.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "d4cd0c9f-07e1-451c-bad2-3b2dbc2acb9b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
      "output_type": "stream",
      "text": [
       "There are 29594 words in this file.\n",
-      "There are 5981 words in this file.\n",
+      "There are 5981 unique words in this file.\n",
       "The top ten words are as follows: ['the', 'and', 'to', 'a', 'of', 'she', 'said', 'in', 'it', 'was']\n"
      ]
     }
@@ -88,11 +88,11 @@
     "alice_ser = pd.Series(words, name=\"words\") # A Series from the `words` list\n",
     "len_ser = alice_ser.size # The length of `alice_ser`\n",
     "alice_ser_ucount = alice_ser.unique().size # The number of unique words in `alice_ser` \n",
-    "top10_words = alice_ser.value_counts(sort=True, ascending=False)[:10] # A collection of the top ten most common words\n",
+    "top10_words = alice_ser.value_counts(sort=True, ascending=False)[:10].index.tolist() # A collection of the top ten most common words\n",
     "\n",
     "print(f\"There are {len_ser} words in this file.\")\n",
     "print(f\"There are {alice_ser_ucount} unique words in this file.\")\n",
-    "print(f\"The top ten words are as follows: {top10_words.index.tolist()}\")"
+    "print(f\"The top ten words are as follows: {top10_words}\")"
    ]
   },
   {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a5aa283b-c754-4a75-9b66-ebacdd8d81f5",
    "metadata": {},
    "outputs": [
@@ -163,17 +163,7 @@
       "Once converted to lower case, there are 5650 unique words in the Series\n",
       "Once punctuation is stripped, there are 3346 unique words in the Series\n",
       "In the cleaned Series the top ten most common words are:\n",
-      "the     1825\n",
-      "and      913\n",
-      "to       803\n",
-      "a        689\n",
-      "of       632\n",
-      "it       538\n",
-      "she      535\n",
-      "said     460\n",
-      "in       431\n",
-      "you      421\n",
-      "Name: words, dtype: int64\n"
+      "['the', 'and', 'to', 'a', 'of', 'it', 'she', 'said', 'in', 'you']\n"
      ]
     }
    ],
@@ -193,16 +183,16 @@
     "    \n",
     "\n",
     "    \n",
-    "alice_ser_lower = alice_ser.str.lower() # hint: lambda x: x.lower()\n",
-    "alice_sl_ucount = alice_ser_lower.unique().size # Integer count of unique()\n",
-    "alice_ser_c = strip_punct(alice_ser_lower) # hint: lambda x: strip_punct(x) \n",
-    "                  #       or perhaps lambda x: strip_punct(x.lower())?\n",
+    "# NB: I have kept with pandas methods where possible, as this makes for cleaner and more performant code.\n",
+    "alice_ser_lower = alice_ser.str.lower() \n",
+    "alice_sl_ucount = alice_ser_lower.unique().size \n",
+    "alice_ser_c = strip_punct(alice_ser_lower) \n",
     "\n",
     "alice_ser_c.dropna(inplace=True) # Get rid of rows where there were no\n",
     "                                 # alphanumeric characters\n",
     "\n",
     "alice_sc_ucount = alice_ser_c.unique().size # Integer count of unique from cleaned data \n",
-    "c_top10_words = alice_ser_c.value_counts(sort=True, ascending=False)[:10] # Collection of top ten words\n",
+    "c_top10_words = alice_ser_c.value_counts(sort=True, ascending=False)[:10].index.tolist() # Collection of top ten words\n",
     "\n",
     "print(f\"Once converted to lower case, there are {alice_sl_ucount} unique words in the Series\")\n",
     "print(f\"Once punctuation is stripped, there are {alice_sc_ucount} unique words in the Series\") \n",
@@ -212,10 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6e5e35af-495b-4880-8ca3-108a58e5fc2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is True that words with 'b' are longer on average. 'b' words are an average 5.6 characters in length. The others are an average 4.1 characters in length.\n"
+     ]
+    }
+   ],
    "source": [
     "# 2d. Now that we have a more cleaned data set, lets compare word lengths\n",
     "#     In this cleaned Series are the words with b on average longer or shorter\n",
@@ -223,22 +221,23 @@
     "\n",
     "# Step 1. Get mask for b words - get new series\n",
     "\n",
-    "hasb_ser =  ... # A Series mask for has 'b'\n",
+    "hasb_mask = alice_ser_c.str.contains(\"b\", case=False, regex=False) # A Series mask for has 'b'\n",
+    "hasb_ser = alice_ser_c[hasb_mask] \n",
     "\n",
     "# Step 1a. Get new series with the length of these words\n",
-    "len_hasb_ser = hasb_ser.map(len) # A new series of lengths of these words\n",
+    "len_hasb_ser = hasb_ser.str.len() # A new series of lengths of these words\n",
     "\n",
     "# Step 1b. Get the average length \n",
-    "avg_len_hasb = ... # A float representing avg len with 'b'\n",
+    "avg_len_hasb = len_hasb_ser.mean() # A float representing avg len with 'b'\n",
     "\n",
     "#Step 2. Get mask for non-b words - get new series\n",
-    "notb_ser = ... # A Series mask for not has 'b' \n",
+    "notb_ser = alice_ser_c[~hasb_mask] # A Series mask for not has 'b' \n",
     "\n",
     "# Step 2a. \n",
-    "len_notb_ser = notb_ser.map(len) # A new series of lengths of these words\n",
+    "len_notb_ser = notb_ser.str.len() # A new series of lengths of these words\n",
     "\n",
     "# Step 2b. \n",
-    "avg_len_nonb = ... # A float representing avg len without 'b'\n",
+    "avg_len_nonb = len_notb_ser.mean() # A float representing avg len without 'b'\n",
     "\n",
     "bword_longer = avg_len_hasb > avg_len_nonb # A Boolean representing if b words are longer on avg.\n",
     "\n",
@@ -263,24 +262,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6aacec93-2301-4676-b128-f909d8b98dff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "By removing the license from the text we process, we have removed 3069 words from the Alice file prior to processing.\n",
+      "By removing the license from the text we process, we have removed 3048 words from the Dorian Gray file prior to processing.\n"
+     ]
+    }
+   ],
    "source": [
     "# 3a. How many words have we removed by stripping out the license?\n",
     "#     Note, this assumes the same simple split by space\n",
     "\n",
-    "def remove_gutenberg_license(text):\n",
+    "def remove_gutenberg_license(text: str) -> str:\n",
     "    '''Removes the licence text from the top and bottom of files \n",
     "       downloaded from Project Gutenberg''' \n",
-    "\n",
     "    # First we will split by lines\n",
+    "    lines = text.splitlines()\n",
     "    # Then find the line that startswith(\"*** START\")\n",
+    "    start_idx = next(i for i, line in enumerate(lines) if line.startswith(\"*** START\")) + 1\n",
     "    # Then find the line that startswith(\"*** END\")\n",
+    "    end_idx = next(i for i, line in enumerate(lines) if line.startswith(\"*** END\"))\n",
     "    # Then we slice the list of lines, rejoin, and return\n",
-    "    ...\n",
-    "    return text\n",
+    "    return \"\\n\".join(lines[start_idx:end_idx])\n",
     "\n",
     "alice_path = \"https://www.gutenberg.org/files/11/11-0.txt\"\n",
     "doriangray_path = \"https://www.gutenberg.org/cache/epub/174/pg174.txt\"\n",
