--- a/classes/Ch.02.Exercises-FSDS-MT22.ipynb
+++ b/classes/Ch.02.Exercises-FSDS-MT22.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d4cd0c9f-07e1-451c-bad2-3b2dbc2acb9b",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bc2f8298-f10b-47c3-80a3-b34c3bb488d7",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 1668 words with the letter 'b' in them (regardless of case\n",
+      "There are 1668 words with the letter 'b' in them (regardless of case)\n",
       "Of the words in the Series, 5.6% have the letter 'b'\n"
      ]
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "a5aa283b-c754-4a75-9b66-ebacdd8d81f5",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "6e5e35af-495b-4880-8ca3-108a58e5fc2f",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "6aacec93-2301-4676-b128-f909d8b98dff",
    "metadata": {},
    "outputs": [
