--- a/assignments/Ch.01.Exercises-FSDS-MT22.ipynb
+++ b/assignments/Ch.01.Exercises-FSDS-MT22.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "2752d838-de79-48c9-8af3-7d648eaba757",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.7 µs ± 1.43 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "17.9 µs ± 899 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
       "euiooueoeeao\n",
       "Iaeeoieiaeuoie\n",
       "Aiiieae\n",
@@ -171,15 +171,14 @@
     }
    ],
    "source": [
-    "import re\n",
     "from typing import Optional\n",
     "\n",
     "\n",
     "def return_only_vowels(text: str) -> Optional[str]:\n",
     "    if not isinstance(text, str):\n",
     "        return None\n",
-    "    all_vowels = 'aeiouæøåAEIOUÆØÅ'\n",
-    "    return \"\".join([letter for letter in text if letter in all_vowels]) # NB: Note the Danish vowels!\n",
+    "    all_vowels = 'aeiouæøåAEIOUÆØÅ'  # NB: Note the Danish vowels!\n",
+    "    return \"\".join(letter for letter in text if letter in all_vowels) \n",
     "\n",
     "\n",
     "text1 = \"The quick brown fox jumped over the lazy dog\"\n",
