remove remove whitespace

--- a/assignments/Ch.02.Exercises-FSDS-MT22.ipynb
+++ b/assignments/Ch.02.Exercises-FSDS-MT22.ipynb
@@ -23,7 +23,9 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import requests "
+    "import requests \n",
+    "\n",
+    "from typing import Optional"
    ]
   },
   {
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "a5aa283b-c754-4a75-9b66-ebacdd8d81f5",
    "metadata": {},
    "outputs": [
@@ -179,7 +181,7 @@
     "\n",
     "def strip_punct(text: pd.Series) -> pd.Series:\n",
     "    \"\"\"Returns just the words in a Series, removing punctuation\"\"\"\n",
-    "    return text.str.replace(r\"[^\\w\\s']\", \"\", regex=True)\n",
+    "    return text.str.replace(r\"[^\\w']\", \"\", regex=True)\n",
     "    \n",
     "\n",
     "    \n",
