add nice lil function

--- a/assignments/Ch.02.Exercises-FSDS-MT22.ipynb
+++ b/assignments/Ch.02.Exercises-FSDS-MT22.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "6aacec93-2301-4676-b128-f909d8b98dff",
    "metadata": {},
    "outputs": [
@@ -281,6 +281,9 @@
     "# 3a. How many words have we removed by stripping out the license?\n",
     "#     Note, this assumes the same simple split by space\n",
     "\n",
+    "from typing import Tuple\n",
+    "\n",
+    "\n",
     "def remove_gutenberg_license(text: str) -> str:\n",
     "    '''Removes the licence text from the top and bottom of files \n",
     "       downloaded from Project Gutenberg''' \n",
@@ -293,18 +296,19 @@
     "    # Then we slice the list of lines, rejoin, and return\n",
     "    return \"\\n\".join(lines[start_idx:end_idx])\n",
     "\n",
+    "\n",
+    "def process_file(url: str) -> Tuple[str, int]:\n",
+    "    req = requests.get(url)\n",
+    "    text = req.content.decode(\"utf-8\")\n",
+    "    new_text = remove_gutenberg_license(text)\n",
+    "    less_words = len(text.split()) - len(new_text.split())\n",
+    "    return new_text, less_words\n",
+    "\n",
     "alice_path = \"https://www.gutenberg.org/files/11/11-0.txt\"\n",
     "doriangray_path = \"https://www.gutenberg.org/cache/epub/174/pg174.txt\"\n",
     "\n",
-    "req = requests.get(alice_path)\n",
-    "text = req.content.decode(\"utf-8\")\n",
-    "new_text = remove_gutenberg_license(text)\n",
-    "less_words_alice = len(text.split()) - len(new_text.split())\n",
-    "\n",
-    "req = requests.get(doriangray_path)\n",
-    "text = req.content.decode(\"utf-8\")\n",
-    "new_text = remove_gutenberg_license(text)\n",
-    "less_words_dg = len(text.split()) - len(new_text.split())\n",
+    "alice_text, less_words_alice = process_file(alice_path)\n",
+    "dg_text, less_words_dg = process_file(doriangray_path)\n",
     "\n",
     "print(f\"By removing the license from the text we process, we have removed {less_words_alice} words from the Alice file prior to processing.\")\n",
     "\n",
