--- a/assignments/Ch.03.Exercises-FSDS-MT22.ipynb
+++ b/assignments/Ch.03.Exercises-FSDS-MT22.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b059cac4-af19-4fa8-a6d4-befe9913965b",
    "metadata": {},
    "outputs": [
@@ -117,8 +117,11 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
-    "movie_data = Path().cwd().parent / \"data\"\n",
-    "movie_df = pd.read_csv(movie_data / \"imdb_over10k_votes_movies.csv\")\n",
+    "movie_dir = Path().cwd().parent / \"data\"\n",
+    "movie_path = movie_dir / \"imdb_over10k_votes_movies.csv\"\n",
+    "assert movie_path.exists(), \"File not found\"\n",
+    "movie_df = pd.read_csv(movie_path)\n",
+    "\n",
     "\n",
     "movie_df.info()"
    ]
@@ -149,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "73506cdc-24b7-428d-8521-a2d591ae199c",
    "metadata": {},
    "outputs": [
@@ -204,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "20381282-5cc4-417a-a5fc-58f52e609acd",
    "metadata": {},
    "outputs": [
@@ -269,16 +272,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c2dfbecd-6bb5-4584-9027-0a120af3a420",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the data set there were 38984 Comedy movies.\n",
+      "They had an average score of 6.5.\n",
+      "In the data set there were 59268 Drama movies.\n",
+      "They had an average score of 6.9.\n"
+     ]
+    }
+   ],
    "source": [
-    "num_comedy = ...\n",
-    "avg_comedy = 0\n",
+    "# Create one genre column with all genres concatenated\n",
+    "movie_df[\"genre\"] = movie_df[\"genre1\"] + movie_df[\"genre2\"].fillna(\"\") + movie_df[\"genre3\"].fillna(\"\")\n",
     "\n",
-    "num_drama = ...\n",
-    "avg_drama = 0\n",
+    "comedy = movie_df[movie_df[\"genre\"].str.contains(\"Comedy\")]\n",
+    "num_comedy = comedy.size\n",
+    "avg_comedy = comedy[\"averageRating\"].mean()\n",
+    "\n",
+    "drama = movie_df[movie_df[\"genre\"].str.contains(\"Drama\")]\n",
+    "num_drama = drama.size\n",
+    "avg_drama = drama[\"averageRating\"].mean()\n",
     "\n",
     "print(f\"In the data set there were {num_comedy} Comedy movies.\")\n",
     "print(f\"They had an average score of {avg_comedy:0.1f}.\")\n",
@@ -333,30 +352,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eebde3ff-3476-4529-88cd-f838b5562a4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a19aaf0e-d810-4053-98a4-e878d8ae3824",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3216b578-1d44-4487-8823-360fe23f545f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "1791cd5f-5181-4132-b5cb-3e24ea1e4ab3",
    "metadata": {},
@@ -393,15 +388,12 @@
     "- Additional action 2. (either on DF or elsewise, 2pts)\n",
     "- Does have easter egg (1pt)\n",
     "- Does have intro and/or help page (1pt)\n",
-    "\n",
     "Robust:\n",
     "- Handles bad input gracefully (2pts)\n",
     "- Methods have at least a single comment explaining purpose (1pt)\n",
-    "\n",
     "Elegant:\n",
     "- Has actions separated usefully into methods. (1pt)\n",
     "- Has other refactoring (subjective, 2pts)\n",
-    "\n",
     "Creative: \n",
     "- Be creative. This might involve a useful help message, some interesting feature, or a refactoring that uses novel components. (5pts)\n",
     "\n",
@@ -412,11 +404,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30ee9deb",
+   "metadata": {},
+   "source": [
+    "# NB: My Solution is in the `class3_pandasexplorer.py` file! (below is pure Bernie :))"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "cec9704c-9197-4ca6-ab00-c745fe6afec2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please make a selection\n",
+      "Please make a selection\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "\n",
