--- a/assignments/Ch.03.Exercises-FSDS-MT22.ipynb
+++ b/assignments/Ch.03.Exercises-FSDS-MT22.ipynb
@@ -408,7 +408,7 @@
             "id": "30ee9deb",
             "metadata": {},
             "source": [
-                "# NB: My Solution is in the `class3_pandasexplorer.py` file! (below is pure Bernie :)). You can find it using [this link to my github](https://github.com/Rysias/IntroducingPython/blob/main/assignments/class3_pandasexplorer.py)"
+                "# NB: My Solution is in the `class3_pandasexplorer.py` file! (below is pure Bernie :)). You can find it using [this link to my github](https://github.com/Rysias/IntroducingPython/blob/main/assignments/class3_pandasexplorer.py"
             ]
         },
         {
